# stack-mine-track

./: .gitignore  Dockerfile  Makefile  README.md
app/: README.md  app.py  test.py
app/mlruns/0/: meta.yaml
app/templates/: base.html  dashboard.html
artefatos/: job.yaml
mine-tracker/: .gitignore  README.md  pyproject.toml  requirements.txt
mine-tracker/conf/: logging.yml
mine-tracker/conf/base/: catalog.yml  parameters.yml  parameters_deploy.yml  parameters_inference.yml  parameters_mine.yml  parameters_model.yml
mine-tracker/notebooks/: Mine_FeatureEngineer.ipynb  Mine_FitModel.ipynb
mine-tracker/notebooks/report_segmentado/: README_segmentado.txt  segment_outliers_P95.csv
mine-tracker/src/mine_tracker/: __init__.py  __main__.py  settings.py
mine-tracker/src/mine_tracker/pipelines/deploy/: __init__.py  nodes.py  pipeline.py
mine-tracker/src/mine_tracker/pipelines/inference/: __init__.py  nodes.py  pipeline.py
mine-tracker/src/mine_tracker/pipelines/mine/: __init__.py  nodes.py  pipeline.py
mine-tracker/src/mine_tracker/pipelines/model/: nodes.py  pipeline.py
mine-tracker/tests/pipelines/deploy/: test_pipeline.py
mine-tracker/tests/pipelines/inference/: test_pipeline.py
mine-tracker/tests/pipelines/mine/: test_pipeline.py
mine-tracker/tests/pipelines/model/: test_pipeline.py
